Deprecate xpack.eql.enabled setting and make it a no-op (#61375)
* Deprecate xpack.eql.enabled and make it a no-op
* Remove uses of xpack.eql.enabled